tests/interpreter/errors/too_many_args.mochi
fun add(a: int, b: int): int { a + b }
let f = add as fun(int, int, int): int
f(1, 2, 3)
